--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -66,7 +66,7 @@
     left: 30%;
     width: 100%;
     height: 100%;
-    background: url('https://ibb.co/mFP1Ksh9') center/cover no-repeat;
+    background: url('https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/flogo.webp') center/cover no-repeat;
     opacity: 0.1;
     z-index: 0;
   }
@@ -117,7 +117,7 @@
         <!-- Logo section -->
         <tr>
           <td align="center" style="padding: 40px 20px 0 20px;">
-            <img src="https://ibb.co/BVrHjWDz" alt="Logo" width="200" style="display: block;">
+            <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/blacklogo.webp" alt="studiooneoff logo" width="200" style="display: block;">
           </td>
         </tr>
         
@@ -132,7 +132,7 @@
         <!-- Main image -->
         <tr>
           <td align="center" style="padding: 30px 20px;">
-            <img src="https://ibb.co/k6qJJ6bK" alt="Rendering" width="700" style="width: 100%; max-width: 700px; height: auto; display: block;">
+            <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/1.webp" alt="Interactive 3D Tours" width="700" style="width: 100%; max-width: 700px; height: auto; display: block;">
             <p style="text-align: center; font-size: 16px; margin: 10px 0 0 0;"><strong>Interactive 3D Tours</strong></p>
           </td>
         </tr>
@@ -143,41 +143,41 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/rG2WVThq" alt="CG Animation" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s1.webp" alt="CG Animation" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">CG Animation</h3>
                 </td>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/W9jRxrY" alt="Exterior Rendering" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s2.webp" alt="Exterior Rendering" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Exterior Rendering</h3>
                 </td>
               </tr>
               <tr>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/rGF2WfBY" alt="3D Virtual Tours" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s3.webp" alt="3D Virtual Tours" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Virtual Tours</h3>
                 </td>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/5g5J651J" alt="3D Cinemagraph" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s4.webp" alt="3D Cinemagraph" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Cinemagraph</h3>
                 </td>
               </tr>
               <tr>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/VcjTczzS" alt="Aerial CGI" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s5.webp" alt="Aerial CGI" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Aerial CGI</h3>
                 </td>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/Jj3HxY7X" alt="Interior Rendering" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s6.webp" alt="Interior Rendering" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Interior Rendering</h3>
                 </td>
               </tr>
               <tr>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/Wv9XdNjQ" alt="Dollhouse Rendering" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s7.webp" alt="Dollhouse Rendering" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Dollhouse Rendering</h3>
                 </td>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://ibb.co/svjGrpLg" alt="Floor Plan" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s8.webp" alt="Floor Plan" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Floor Plan Visualization</h3>
                 </td>
               </tr>
@@ -222,8 +222,8 @@
                 <td class="responsive-column" valign="top" width="50%" style="padding: 0 10px 20px 0;">
                   <h3 style="margin: 0 0 10px 0; color: #ffffff;">CONTACT</h3>
                   <p style="margin: 0 0 5px 0;"><a href="tel:+918239999834" style="color: #ffffff; text-decoration: none; font-size: 14px;">+91 82399 99834</a></p>
-                  <p style="margin: 0 0 5px 0;"><a href="https://www.studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">www.studiooneoff.com</a></p>
                   <p style="margin: 0;"><a href="mailto:contact@studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">contact@studiooneoff.in</a></p>
+                  <p style="margin: 0 0 5px 0;"><a href="https://www.studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">www.studiooneoff.com</a></p>
                 </td>
                 <td class="responsive-column" valign="top" width="50%">
                   <div class="footer-buttons">
