final committed changes

--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -117,7 +117,7 @@
         <!-- Logo section -->
         <tr>
           <td align="center" style="padding: 40px 20px 0 20px;">
-            <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/blacklogo.webp" alt="studiooneoff logo" width="200" style="display: block;">
+            <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/blacklogo.png" alt="studiooneoff logo" width="200" style="display: block;">
           </td>
         </tr>
         
@@ -125,7 +125,7 @@
         <tr>
           <td align="center" style="padding: 20px 20px 0 20px;">
             <h1 style="font-size: 40px; text-align: center; color: #000000; margin: 0; line-height: 1.2;">3D Rendering Services<br>for Architecture and Real Estate</h1>
-            <p style="margin: 10px 0 0 0; font-size: 14px; text-align: center; color: #000000; line-height: 1.4;">Get CGI Solutions Tailored to your Needs, Next-day start, 1-week delivery<br>Boost your business now!</p>
+            <p style="margin: 10px 0 0 0; font-size: 14px; text-align: center; color: #000000; line-height: 1.4;">Get CGI Solutions Tailored to your Needs, Next-day start, Quick delivery<br>Boost your business now!</p>
           </td>
         </tr>
         
@@ -147,38 +147,38 @@
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">CG Animation</h3>
                 </td>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s2.webp" alt="Exterior Rendering" class="service-img" width="100%" style="display: block;">
-                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Exterior Rendering</h3>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s3.webp" alt="3D Virtual Tours" class="service-img" width="100%" style="display: block;">
-                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Virtual Tours</h3>
-                </td>
-                <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s4.webp" alt="3D Cinemagraph" class="service-img" width="100%" style="display: block;">
-                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Cinemagraph</h3>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s5.webp" alt="Aerial CGI" class="service-img" width="100%" style="display: block;">
-                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Aerial CGI</h3>
-                </td>
-                <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s6.webp" alt="Interior Rendering" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s2.webp" alt="Interior Rendering" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Interior Rendering</h3>
                 </td>
               </tr>
               <tr>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s7.webp" alt="Dollhouse Rendering" class="service-img" width="100%" style="display: block;">
-                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Dollhouse Rendering</h3>
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s3.webp" alt="Exterior Rendering" class="service-img" width="100%" style="display: block;">
+                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Exterior Rendering</h3>
                 </td>
                 <td valign="top" width="50%" style="padding: 10px;">
-                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s8.webp" alt="Floor Plan" class="service-img" width="100%" style="display: block;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s4.webp" alt="Aerial CGI" class="service-img" width="100%" style="display: block;">
+                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Aerial CGI</h3>
+                </td>
+              </tr>
+              <tr>
+                <td valign="top" width="50%" style="padding: 10px;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s5.webp" alt="3D Virtual Tours" class="service-img" width="100%" style="display: block;">
+                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Virtual Tours</h3>
+                </td>
+                <td valign="top" width="50%" style="padding: 10px;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s6.webp" alt="3D Cinemagraph" class="service-img" width="100%" style="display: block;">
+                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Cinemagraph</h3>
+                </td>
+              </tr>
+              <tr>
+                <td valign="top" width="50%" style="padding: 10px;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s7.webp" alt="3D Floor Plan Visualization" class="service-img" width="100%" style="display: block;">
                   <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">3D Floor Plan Visualization</h3>
+                </td>
+                <td valign="top" width="50%" style="padding: 10px;">
+                  <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/s8.webp" alt="Dollhouse Rendering" class="service-img" width="100%" style="display: block;">
+                  <h3 style="margin: 5px 0 0 0; font-size: 16px; text-align: center;">Dollhouse Rendering</h3>
                 </td>
               </tr>
             </table>
@@ -230,12 +230,12 @@
                     <table border="0" cellpadding="0" cellspacing="0" width="100%">
                       <tr>
                         <td align="right" style="padding: 0 0 10px 0;">
-                          <a href="https://www.studiooneoff.in" class="footer-btn" style="display: inline-block; text-align: center;">START PROJECT &rarr;</a>
+                          <a href="https://www.studiooneoff.in/architectural-work" class="footer-btn" style="display: inline-block; text-align: center;">CHECK OUR WORK &rarr;</a>
                         </td>
                       </tr>
                       <tr>
                         <td align="right">
-                          <a href="https://www.studiooneoff.in" class="footer-btn" style="display: inline-block; text-align: center;">BOOK FREE CONSULTATION &rarr;</a>
+                          <a href="https://www.studiooneoff.in/contact" class="footer-btn" style="display: inline-block; text-align: center;">CONTACT FOR FREE CONSULTATION &rarr;</a>
                         </td>
                       </tr>
                     </table>
