--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -215,36 +215,61 @@
         
         <!-- Footer -->
         <tr>
-          <td class="footer-container" style="padding: 20px;">
-            <div class="footer-bg"></div>
+  <td class="footer-container" style="padding: 20px;">
+    <div class="footer-bg"></div>
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+      <tr>
+        <!-- Left Column -->
+        <td class="responsive-column" valign="top" width="50%" style="padding: 0 10px 20px 0;">
+          <h3 style="margin: 0 0 10px 0; color: #ffffff;">CONTACT</h3>
+
+          <!-- WhatsApp -->
+          <p style="margin: 0 0 5px 0;">
+            <a href="https://wa.me/918239999834" style="color: #ffffff; text-decoration: none; font-size: 14px;">
+              <img src="https://cdn-icons-png.flaticon.com/24/733/733585.png" alt="WhatsApp" width="16" height="16" style="vertical-align: middle; margin-right: 6px;">
+              +91 82399 99834
+            </a>
+          </p>
+
+          <!-- Email -->
+          <p style="margin: 0 0 5px 0;">
+            <a href="mailto:contact@studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">
+              <img src="https://cdn-icons-png.flaticon.com/24/732/732200.png" alt="Email" width="16" height="16" style="vertical-align: middle; margin-right: 6px;">
+              contact@studiooneoff.in
+            </a>
+          </p>
+
+          <!-- Website -->
+          <p style="margin: 0;">
+            <a href="https://www.studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">
+              <img src="https://cdn-icons-png.flaticon.com/24/535/535239.png" alt="Website" width="16" height="16" style="vertical-align: middle; margin-right: 6px;">
+              www.studiooneoff.com
+            </a>
+          </p>
+        </td>
+
+        <!-- Right Column -->
+        <td class="responsive-column" valign="top" width="50%">
+          <div class="footer-buttons">
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
-                <td class="responsive-column" valign="top" width="50%" style="padding: 0 10px 20px 0;">
-                  <h3 style="margin: 0 0 10px 0; color: #ffffff;">CONTACT</h3>
-                  <p style="margin: 0 0 5px 0;"><a href="tel:+918239999834" style="color: #ffffff; text-decoration: none; font-size: 14px;">+91 82399 99834</a></p>
-                  <p style="margin: 0;"><a href="mailto:contact@studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">contact@studiooneoff.in</a></p>
-                  <p style="margin: 0 0 5px 0;"><a href="https://www.studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">www.studiooneoff.com</a></p>
+                <td align="right" style="padding: 0 0 10px 0;">
+                  <a href="https://www.studiooneoff.in/architectural-work" class="footer-btn" style="display: inline-block; text-align: center;">CHECK OUR WORK &rarr;</a>
                 </td>
-                <td class="responsive-column" valign="top" width="50%">
-                  <div class="footer-buttons">
-                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                      <tr>
-                        <td align="right" style="padding: 0 0 10px 0;">
-                          <a href="https://www.studiooneoff.in/architectural-work" class="footer-btn" style="display: inline-block; text-align: center;">CHECK OUR WORK &rarr;</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td align="right">
-                          <a href="https://www.studiooneoff.in/contact" class="footer-btn" style="display: inline-block; text-align: center;">CONTACT FOR FREE CONSULTATION &rarr;</a>
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
+              </tr>
+              <tr>
+                <td align="right">
+                  <a href="https://www.studiooneoff.in/contact" class="footer-btn" style="display: inline-block; text-align: center;">CONTACT FOR FREE CONSULTATION &rarr;</a>
                 </td>
               </tr>
             </table>
-          </td>
-        </tr>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
+
       </table>
     </td>
   </tr>
