--- a/emailtemplate.html
+++ b/emailtemplate.html
@@ -226,24 +226,24 @@
           <!-- WhatsApp -->
           <p style="margin: 0 0 5px 0;">
             <a href="https://wa.me/918239999834" style="color: #ffffff; text-decoration: none; font-size: 14px;">
-              <img src="https://cdn-icons-png.flaticon.com/24/733/733585.png" alt="WhatsApp" width="16" height="16" style="vertical-align: middle; margin-right: 6px;">
+              <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/whatsapp.png" alt="WhatsApp" width="30" height="30" style="vertical-align: middle; margin-right: 6px;">
               +91 82399 99834
-            </a>
-          </p>
-
-          <!-- Email -->
-          <p style="margin: 0 0 5px 0;">
-            <a href="mailto:contact@studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">
-              <img src="https://cdn-icons-png.flaticon.com/24/732/732200.png" alt="Email" width="16" height="16" style="vertical-align: middle; margin-right: 6px;">
-              contact@studiooneoff.in
             </a>
           </p>
 
           <!-- Website -->
           <p style="margin: 0;">
             <a href="https://www.studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">
-              <img src="https://cdn-icons-png.flaticon.com/24/535/535239.png" alt="Website" width="16" height="16" style="vertical-align: middle; margin-right: 6px;">
-              www.studiooneoff.com
+              <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/internet.png" alt="Website" width="30" height="30" style="vertical-align: middle; margin-right: 6px;">
+              www.studiooneoff.in
+            </a>
+          </p>
+
+          <!-- Email -->
+          <p style="margin: 0 0 5px 0;">
+            <a href="mailto:contact@studiooneoff.in" style="color: #ffffff; text-decoration: none; font-size: 14px;">
+              <img src="https://raw.githubusercontent.com/ArjunSahani/emailtemplates1off/refs/heads/main/emailwebp/message.png" alt="Email" width="30" height="30" style="vertical-align: middle; margin-right: 6px;">
+              contact@studiooneoff.in
             </a>
           </p>
         </td>
@@ -254,7 +254,7 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
                 <td align="right" style="padding: 0 0 10px 0;">
-                  <a href="https://www.studiooneoff.in/architectural-work" class="footer-btn" style="display: inline-block; text-align: center;">CHECK OUR WORK &rarr;</a>
+                  <a href="https://www.studiooneoff.in/architecturalservices" class="footer-btn" style="display: inline-block; text-align: center;">CHECK OUR WORK &rarr;</a>
                 </td>
               </tr>
               <tr>
